@@ -1,3 +1,3 @@
-pyasn1>=0.1.8
+pyasn1>=0.2.3
 pysmi
 pycryptodome
