@@ -4,6 +4,9 @@ Revision 4.3.4, released 2017-02-XX
 
 - Fix to low-level SNMP API example to accommodate changed pyasn1
   SEQUENCE supporting iterator protocol.
+- The pyasn1 version dependency bumped (0.2.3), SEQUENCE/SEQUENCE OF
+  API calls adjusted to accommodate changed pyasn1 API (in part
+  of .setComponentBy*() kw flags).
 - Fixed crash on SNMP engine's invalid message counter increment.
 
 Revision 4.3.3, released 2017-02-04
